--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch Node",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\express\\express.js"
     },
