--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-form": "^8.3.5"
+    "@types/redux-form": "^8.3.5",
+    "redux-mock-store": "^1.5.4"
   }
 }
